package com.socialpulse.app.user.enums;

public enum UserGender {
    MALE,
    FEMALE,
    OTHER
}
