@startuml User Module

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false

title User Module - Domain Model

enum UserStatus {
    PENDING
    ACTIVE
    LOCKED
}

enum VerificationStatus {
    VERIFIED
    NOT_VERIFIED
}

enum UserGender {
    MALE
    FEMALE
    OTHER
}

class User {
    - id: Long
    - username: String
    - email: String
    - passwordHash: String
    - status: UserStatus
    - roles: Set<Role>
    - topics: Set<Topic>
    - verification: VerificationStatus
    - isLocked: boolean
    - failedLoginAttempts: int
    - lastLoginAt: LocalDateTime
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
    + changeUsername(newUsername: String)
    + changePassword(newPasswordHash: String)
    + lockAccount()
    + activeAccount()
}

class UserProfile {
    - id: Long
    - displayName: String
    - bio: String
    - dob: LocalDate
    - gender: UserGender
    - avatarUrl: String
    - avatarPublicId: String
    - updatedAt: LocalDateTime
}

class Role {
    - id: Long
    - name: String
    - description: String
    - permissions: Set<Permission>
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
}

class Permission {
    - id: Long
    - name: String
    - description: String
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
}

class Topic {
    - id: Long
    - name: String
    - slug: String
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
}

User "1" *-- "1" UserProfile
User "1" *-- "*" Role
User "1" -- "*" Topic : subscribes
Role "1" *-- "*" Permission
User ..> UserStatus
User ..> VerificationStatus
UserProfile ..> UserGender

@enduml
